fix: gaps in home page

--- a/apps/frontend/src/styles/components/_mobile-section.scss
+++ b/apps/frontend/src/styles/components/_mobile-section.scss
@@ -75,7 +75,7 @@
 
 .epicure-icons-legend {
   margin-top: 46px;
-  padding: 0 1.25rem 1.5rem;
+  padding: 1.25rem 1.25rem 1.5rem;
   background: $bg-light;
   max-width: 500px;
   margin-left: auto;
